--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </ul>
                 <form>
                     <input type="search" name="q" placeholder="Rechercher">
-                </form>   
+                </form>
                  
             </nav>
         </section>
@@ -44,7 +44,7 @@
             </p>
         </section>   
 
-        <div class="ligne-horizontale"></div>
+        <p class="ligne-horizontale"></p>
 
         <section id="section2" class="container-parent">
             <ul class="photo-horizontale">
@@ -63,7 +63,7 @@
             </ul> 
         </section>
 
-        <div class="ligne-horizontale"></div>
+        <p class="ligne-horizontale"></p>
 
 
         <h2>Nos services</h2>
@@ -109,7 +109,7 @@
             </p>   
         </section>   
         
-        <div class="ligne-horizontale"></div>
+        <p class="ligne-horizontale"></p>
 
         <section id="section4" class="container-parent">
             <ul class="photo-horizontale">
@@ -136,3 +136,8 @@
 </body>
 
 </html>
+
+
+
+
+
