--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
                     <li><a href="contact.html"> Contact</a></li>
                 </ul>
                 <form>
-                    <input type="search" name="q" placeholder="Rechercher">
+                    <input id="input_nav" type="search" name="q" placeholder="Rechercher">
                 </form>   
                  
             </nav>
